--- a/ayuvo/Base.lproj/Main.storyboard
+++ b/ayuvo/Base.lproj/Main.storyboard
@@ -23,8 +23,7 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="FirstScreenButton2:" destination="9pv-A4-QxB" eventType="touchUpInside" id="W4N-ys-aoY"/>
-                                    <action selector="FirstScreenButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="cL3-di-2MI"/>
+                                    <action selector="FirstScreenButton2:" destination="9pv-A4-QxB" eventType="touchUpInside" id="FpE-0Y-oDZ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OaV-7A-rMX">
@@ -57,7 +56,7 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="FirstScreenButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="UTa-70-0nE"/>
+                                    <action selector="FirstScreenButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="O1e-6j-Kyw"/>
                                 </connections>
                             </button>
                         </subviews>
