--- a/ayuvo/Base.lproj/Main.storyboard
+++ b/ayuvo/Base.lproj/Main.storyboard
@@ -15,7 +15,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w61-DZ-zYr">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zq-bt-LKP">
+                                <rect key="frame" x="30" y="85" width="77" height="77"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <state key="normal" title="どりゃあ">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="ButtonDesign:" destination="9pv-A4-QxB" eventType="touchUpInside" id="EWK-Qh-Gx4"/>
+                                    <action selector="FirstScreenButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="O1e-6j-Kyw"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w61-DZ-zYr" customClass="RoundButton" customModule="ayuvo" customModuleProvider="target">
                                 <rect key="frame" x="122" y="85" width="77" height="77"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -23,6 +35,7 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
+                                    <action selector="ButtonDesign:" destination="9pv-A4-QxB" eventType="touchUpInside" id="NCw-vE-Edy"/>
                                     <action selector="FirstScreenButton2:" destination="9pv-A4-QxB" eventType="touchUpInside" id="FpE-0Y-oDZ"/>
                                 </connections>
                             </button>
@@ -30,33 +43,24 @@
                                 <rect key="frame" x="215" y="85" width="77" height="77"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <state key="normal" title="どりゃああああ">
+                                <state key="normal" title="楓">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="FirstScreenButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="KL8-5N-MBC"/>
+                                    <action selector="ButtonDesign:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Eb6-GI-aez"/>
+                                    <action selector="FirstScreenButton3:" destination="9pv-A4-QxB" eventType="touchUpInside" id="bvr-N2-oXL"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLM-bB-mrX">
                                 <rect key="frame" x="306" y="85" width="77" height="77"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <state key="normal" title="どりゃああああ">
+                                <state key="normal" title="よわ…">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="FirstScreenButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="dcK-wy-x3R"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zq-bt-LKP">
-                                <rect key="frame" x="30" y="85" width="77" height="77"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <state key="normal" title="どりゃああああ">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="FirstScreenButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="O1e-6j-Kyw"/>
+                                    <action selector="ButtonDesign:" destination="9pv-A4-QxB" eventType="touchUpInside" id="pSq-4N-QIe"/>
+                                    <action selector="FirstScreenButtonyowa:" destination="9pv-A4-QxB" eventType="touchUpInside" id="jk6-Q4-235"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -64,9 +68,6 @@
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="ポケモン" image="first" id="acW-dT-cKf"/>
-                    <connections>
-                        <outlet property="button" destination="4zq-bt-LKP" id="Ayr-nk-P9F"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
@@ -81,10 +82,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAs-Se-Uk1">
-                                <rect key="frame" x="20" y="44" width="83" height="30"/>
+                                <rect key="frame" x="43" y="44" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <state key="normal" title="なんでえ😭">
+                                <state key="normal" title="なんで">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
